Fix header layout bugs

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -16,18 +16,22 @@ body {
   background: -moz-linear-gradient(#325F96, #083361);
   background: linear-gradient(#325F96, #083361);
   color: #fff;
-  height: 80px;
+  height: 96px;
+}
+
+.header-items {
+  margin-top: -10px;
 }
 
 .dod-logo {
   float: left;
-  padding: 5px 0 0 10px;
+  padding: 10px 0 0 10px;
   cursor: pointer;
 }
 
 .header-title {
   float: left;
-  margin: 5px 10px;
+  margin: 10px 0 0 14px;
   font-size: 1.5rem;
 }
 
@@ -36,7 +40,7 @@ body {
 
   .header {
     color: #fff;
-    height: 86px;
+    height: 80px;
   }
   .sub-title {
     font-size: 1px;
@@ -45,7 +49,7 @@ body {
 
 .sub-title {
   float: left;
-  margin-left: 10px;
+  margin-left: 86px;
   font-size: 15px;
   color: #708CA7;
   font-style: italic;
